--- a/ElectricityNetView/ElectricityNetView.csproj
+++ b/ElectricityNetView/ElectricityNetView.csproj
@@ -115,14 +115,14 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="data\dss\cm_EXP_POWERS.CSV" />
-    <None Include="data\dss\cm_EXP_VOLTAGES.CSV" />
-    <None Include="data\dss\Generators.DSS" />
-    <None Include="data\dss\Lines.DSS" />
-    <None Include="data\dss\Loads.DSS" />
-    <None Include="data\dss\Master.dss" />
-    <None Include="data\dss\Run_cm.DSS" />
-    <None Include="data\dss\Transformers.DSS" />
+    <None Include="example\dss\cm_EXP_POWERS.CSV" />
+    <None Include="example\dss\cm_EXP_VOLTAGES.CSV" />
+    <None Include="example\dss\Generators.DSS" />
+    <None Include="example\dss\Lines.DSS" />
+    <None Include="example\dss\Loads.DSS" />
+    <None Include="example\dss\Master.dss" />
+    <None Include="example\dss\Run_cm.DSS" />
+    <None Include="example\dss\Transformers.DSS" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -132,6 +132,9 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\ElectricityService\ElectricityNetView.ElectricityService.ConfigStationInformation.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\ElectricityService\ElectricityNetView.ElectricityService.ForecastDayStationData.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\ElectricityService\ElectricityNetView.ElectricityService.LogUser.datasource">
@@ -179,73 +182,73 @@
     <Content Include="chart\template.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="data\data\Line.txt">
+    <None Include="example\data\Line.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="data\data\HIS.txt">
+    <None Include="example\data\HIS.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="data\data\G.txt">
+    <None Include="example\data\G.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="data\data\config.txt">
+    <None Include="example\data\config.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="data\data\BUS.txt">
+    <None Include="example\data\BUS.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <Resource Include="data\dss\cm1_Power_seq_kVA.txt" />
-    <Resource Include="data\dss\cm_Power_seq_kVA.txt" />
-    <Resource Include="data\dss\cm_VLN.Txt" />
-    <Resource Include="data\dss\cm_VLN_Node.Txt" />
-    <Resource Include="data\dss\L.txt" />
-    <Resource Include="data\dss\Loads.txt" />
-    <Content Include="data\his\day0.txt">
+    <Resource Include="example\dss\cm1_Power_seq_kVA.txt" />
+    <Resource Include="example\dss\cm_Power_seq_kVA.txt" />
+    <Resource Include="example\dss\cm_VLN.Txt" />
+    <Resource Include="example\dss\cm_VLN_Node.Txt" />
+    <Resource Include="example\dss\L.txt" />
+    <Resource Include="example\dss\Loads.txt" />
+    <Content Include="example\his\day0.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\day1.txt">
+    <Content Include="example\his\day1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\day10.txt">
+    <Content Include="example\his\day10.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\day11.txt">
+    <Content Include="example\his\day11.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\day12.txt">
+    <Content Include="example\his\day12.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\day13.txt">
+    <Content Include="example\his\day13.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\day14.txt">
+    <Content Include="example\his\day14.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\day2.txt">
+    <Content Include="example\his\day2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\day3.txt">
+    <Content Include="example\his\day3.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\day4.txt">
+    <Content Include="example\his\day4.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\day5.txt">
+    <Content Include="example\his\day5.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\day6.txt">
+    <Content Include="example\his\day6.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\day7.txt">
+    <Content Include="example\his\day7.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\day8.txt">
+    <Content Include="example\his\day8.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\day9.txt">
+    <Content Include="example\his\day9.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\his\extra.txt">
+    <Content Include="example\his\extra.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Service References\ElectricityService\Reference.svcmap">
